--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "jeroennoten/laravel-adminlte": "^1.25",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "pagseguro/pagseguro-php-sdk": "^6.0"
+        "pagseguro/pagseguro-php-sdk": "^6.0",
+        "prettus/l5-repository": "^2.6"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
